# AmbiLight

./: .gitignore  CMakeLists.txt  CMakeUserSkel.cmake  README.md
Arduino/controller/: controller.ino
src/: AmbiLight.cpp  AmbiLight.h  ArduinoController.cpp  ArduinoController.h  DkArduinoController.cpp  DkArduinoController.h  DkUtils.cpp  DkUtils.h  GrabScreen.cpp  GrabScreen.h  KMeans.cpp  KMeans.h  Utils.cpp  main.cpp
